--- a/src/eco.bib
+++ b/src/eco.bib
@@ -12157,21 +12157,21 @@
 	volume = {6},
 	year = {2007}
 }
-@article{Bao2007,
-	abstract = {We develop analytical results on the second-order bias and mean squared error of estimators in time-series models. These results provide a unified approach to developing the properties of a large class of estimators in linear and nonlinear time-series models and they are valid for both normal and nonnormal samples of observations, and where the regressors are stochastic. The estimators included are the generalized method of moments, maximum likelihood, least squares, and other extremum estimators. Our general results are applied to four time-series models. We investigate the effects of nonnormality on the second-order bias results for two of these models, while for all four models, the second-order bias and mean squared error results are given under normality. Numerical results for some of these models are also presented. {\textcopyright} 2006 Elsevier B.V. All rights reserved.},
-	author = {Bao, Yong and Ullah, Aman},
-	doi = {10.1016/j.jeconom.2006.07.007},
-	file = {:D$\backslash$:/Academic Things/Econometrics/Articles/Small Sample Results/Bao, Ullah (2007) The second-order bias and mean squared error of estimators in time-series models.pdf:pdf},
-	issn = {03044076},
-	journal = {Journal of Econometrics},
-	keywords = {Higher-order moments,Stochastic expansion,Time series},
-	mendeley-groups = {Small Sample Results/Nonlinear},
-	number = {2},
-	pages = {650--669},
-	title = {{The second-order bias and mean squared error of estimators in time-series models}},
-	volume = {140},
-	year = {2007}
+@article{Bao2007SecondOrderBiasMean,
+  title = {The {{Second-Order Bias}} and {{Mean Squared Error}} of {{Estimators}} in {{Time-series Models}}},
+  author = {Bao, Yong and Ullah, Aman},
+  year = 2007,
+  journal = {Journal of Econometrics},
+  volume = {140},
+  number = {2},
+  pages = {650--669},
+  issn = {03044076},
+  doi = {10.1016/j.jeconom.2006.07.007},
+  abstract = {We develop analytical results on the second-order bias and mean squared error of estimators in time-series models. These results provide a unified approach to developing the properties of a large class of estimators in linear and nonlinear time-series models and they are valid for both normal and nonnormal samples of observations, and where the regressors are stochastic. The estimators included are the generalized method of moments, maximum likelihood, least squares, and other extremum estimators. Our general results are applied to four time-series models. We investigate the effects of nonnormality on the second-order bias results for two of these models, while for all four models, the second-order bias and mean squared error results are given under normality. Numerical results for some of these models are also presented. {\copyright} 2006 Elsevier B.V. All rights reserved.},
+  keywords = {Higher-order moments,Stochastic expansion,Time series},
+  file = {D:\Academic Things\Econometrics\Articles\Small Sample Results\Bao, Ullah (2007) The second-order bias and mean squared error of estimators in time-series models.pdf}
 }
+
 @article{VanBiesebroeck2007,
 	author = {{Van Biesebroeck}, Johannes},
 	doi = {10.1111/j.1467-6451.2007.00322.x},
