--- a/src/slides/general-principles/structuring-code.qmd
+++ b/src/slides/general-principles/structuring-code.qmd
@@ -141,6 +141,19 @@ Today — a showcase of
 ```{python}
 #| echo: true
 import numpy as np
+
+import matplotlib.pyplot as plt
+import seaborn as sns
+```
+
+
+```{python}
+
+plt.rcParams["font.family"] = "sans-serif"
+plt.rcParams["font.sans-serif"] = ["Arial"]
+
+BG_COLOR = "whitesmoke"
+THEME_COLOR = "#3c165c"
 ```
 
 
@@ -449,7 +462,7 @@ def simulate_static_ols(n_sim=1000, n_obs=100, beta0=0, beta1=0.5):
     return results_ols_errors
 ```
 
-#### Our First Results
+#### Our First Results: Static Model
 
 Now can execute our simulation by calling function with default arguments:
 ```{python}
@@ -471,66 +484,27 @@ In practice you would usually wrap the function in a script and call from the co
 
 #### Distribution of MC Estimates
 
+Can also take a look at density of esimates:
 
-#### Thing
 
 ```{python}
-import numpy as np
-import pandas as pd
-import matplotlib.pyplot as plt
-
-def run_ols_simulation(n_sim=1000, n_obs=100, beta0=0, beta1=0.5, rho=0, dgp_type="strict"):
-    """
-    Monolithic function to simulate OLS bias under two DGPs.
-
-    Args:
-        n_sim: Number of simulations
-        n_obs: Number of observations per simulation
-        beta0: Intercept
-        beta1: Slope coefficient
-        rho: AR(1) coefficient (only used if dgp_type="ar1")
-        dgp_type: "strict" (strict exogeneity) or "ar1" (AR(1) errors)
-    """
-    results = []
-
-    for _ in range(n_sim):
-        if dgp_type == "strict":
-            # Strict exogeneity DGP
-            x = np.random.normal(size=n_obs)
-            epsilon = np.random.normal(size=n_obs)
-            y = beta0 + beta1 * x + epsilon
-        elif dgp_type == "ar1":
-            # AR(1) DGP
-            u = np.zeros(n_obs)
-            for t in range(1, n_obs):
-                u[t] = rho * u[t-1] + np.random.normal()
-            x = np.random.normal(size=n_obs)
-            y = beta0 + beta1 * x + u
-        else:
-            raise ValueError("dgp_type must be 'strict' or 'ar1'")
-
-        # OLS estimation (manual for clarity)
-        X = np.column_stack([np.ones(n_obs), x])
-        beta_hat = np.linalg.inv(X.T @ X) @ X.T @ y
-        results.append(beta_hat[1])  # Store slope estimate
-
-    # Plot results
-    plt.figure(figsize=(10, 6))
-    plt.hist(results, bins=30, edgecolor="k", alpha=0.7)
-    plt.axvline(beta1, color="red", linestyle="--", label="True $\\beta_1$")
-    plt.title(f"Distribution of OLS Estimates ({dgp_type} DGP, ρ={rho})")
-    plt.xlabel("Estimated $\\beta_1$")
-    plt.ylabel("Frequency")
-    plt.legend()
-    plt.show()
-
-    return results
-
-# Example usage:
-strict_results = run_ols_simulation(dgp_type="strict")
-ar1_results = run_ols_simulation(dgp_type="ar1", rho=0.7)
+fig, ax = plt.subplots(figsize=(14, 4.5))
+fig.patch.set_facecolor(BG_COLOR)
+fig.patch.set_edgecolor(THEME_COLOR)
+fig.patch.set_linewidth(5)
+sns.kdeplot(static_results, ax=ax, color=THEME_COLOR)
+plt.axvline(0, color=THEME_COLOR, linestyle="--", label="No bias")
+plt.axvline(np.mean(static_results), color="brown", linestyle="--", label="MC Estimate")
+plt.title(
+    f"Distribution of OLS Estimates under Static Model",
+    loc="left",
+)
+plt.xlabel("Estimation error")
+plt.legend()
+plt.show()
 
 ```
+ 
 
 ## A More Robust Implementation {background="#00100F"}
  
