--- a/src/slides/general-principles/structuring-code.qmd
+++ b/src/slides/general-principles/structuring-code.qmd
@@ -429,7 +429,7 @@ Simplest: wrap in a single function
 
 ```{python}
 #| echo: true
-def simulate_static_ols(n_sim=1000, n_obs=100, beta0=0, beta1=0.5):
+def simulate_ols(n_sim=1000, n_obs=50, beta0=0, beta1=0.5):
     """Simulates OLS estimation for a static/exogenous DGP: y = beta0 + beta1*x + u.
 
     Args:
@@ -457,7 +457,7 @@ def simulate_static_ols(n_sim=1000, n_obs=100, beta0=0, beta1=0.5):
         beta_hat = np.linalg.inv(W.T @ W) @ W.T @ y
 
         # 3. Compute error
-        results_ols_errors.append(beta_hat[1]-beta1)  # Store slope estimate
+        results_ols_errors.append(beta_hat[1]-beta1)
 
     return results_ols_errors
 ```
@@ -467,7 +467,7 @@ def simulate_static_ols(n_sim=1000, n_obs=100, beta0=0, beta1=0.5):
 Now can execute our simulation by calling function with default arguments:
 ```{python}
 #| echo: true
-static_results = simulate_static_ols()
+static_results = simulate_ols()
 print(f"Bias (static DGP): {np.mean(static_results)}")
 ```
 
@@ -484,7 +484,7 @@ In practice you would usually wrap the function in a script and call from the co
 
 #### Distribution of MC Estimates
 
-Can also take a look at density of esimates:
+Can also take a look at density of estimates:
 
 
 ```{python}
@@ -504,7 +504,93 @@ plt.legend()
 plt.show()
 
 ```
+
+
  
+### Expanding the Simulation {background="#43464B"}
+
+
+
+
+#### Expanding the Simulation
+ 
+<div class='left-color'>
+
+Now need to expand simulations to add AR(1) design
+
+</div>
+ 
+- Simplest way: just expand existing function
+- Add new DGP option: 
+
+#### Expanded Simulation Function: With AR(1) DGP
+
+```{python}
+#| echo: true
+#| code-line-numbers: "24-32"
+def simulate_ols(n_sim=1000, n_obs=50, beta0=0, beta1=0.5, dgp_type="static"):
+    """Simulates OLS estimation for static or AR(1) DGP.
+    Args:
+        n_sim (int): Number of simulations to run. Defaults to 1000.
+        n_obs (int): Number of observations per simulation. Defaults to 100.
+        beta0 (float): True intercept value. Defaults to 0.
+        beta1 (float): True slope coefficient. Defaults to 0.5
+        dgp_type (str): Type of DGP: "static" or "ar1". Defaults to "static".
+
+    Returns:
+        list[float]: List of errors of beta1 estimates for each simulation.
+    """
+
+    # Create container to store results
+    results_ols_errors = []
+
+    # Core simulation loop
+    for _ in range(n_sim):
+        # 1. Draw data
+        if dgp_type == "static":
+            x = np.random.normal(size=n_obs)
+            u = np.random.normal(size=n_obs)
+            y = beta0 + beta1 * x + epsilon
+        elif dgp_type == "ar1":
+            y = np.zeros(n_obs + 1)
+            u = np.random.normal(size=n_obs + 1)
+            y[0] = beta0 + u[0]
+            for t in range(1, n_obs + 1):
+                y[t] = beta0 + beta1 * y[t-1] + u[t]
+            # Use the last n_obs elements of y and the first n_obs elements of y as x
+            x = y[:-1]  # x is y lagged (n_obs elements)
+            y = y[1:]  # y[1:] is the dependent variable (n_obs elements)
+            
+
+        # 2. Run OLS estimation
+        W = np.column_stack([np.ones(n_obs), x])
+        beta_hat = np.linalg.inv(W.T @ W) @ W.T @ y
+        
+        # 3. Compute error
+        results_ols_errors.append(beta_hat[1]-beta1)   
+
+    return results_ols_errors
+```
+
+#### Running AR(1) Simulation
+ 
+
+```{python}
+#| echo: true
+ar_results = simulate_ols(dgp_type="ar1")
+print(f"Bias (static DGP): {np.mean(ar_results)}")
+```
+
+
+
+#### Running AR(1) Simulation With High Persistence
+ 
+```{python}
+#| echo: true
+ar_results = simulate_ols(beta1=0.95, dgp_type="ar1")
+print(f"Bias (static DGP): {np.mean(ar_results)}")
+```
+
 
 ## A More Robust Implementation {background="#00100F"}
  
@@ -527,6 +613,13 @@ Also didn't set a seed.
 
 #### Problem: No Separation of Concerns
 
+Things are all jumbled up and hardcoded 
+
+- DGPs
+- Estimator
+
+But does the simulation loop really need to know that? From the point of simulation loop, so
+
 #### Separation of Concerns
 
 Every part occupied with its own activity
@@ -534,6 +627,13 @@ Every part occupied with its own activity
 
 
 ### Further Improvements {background="#43464B"}
+
+#### Wrapping Into a Single Block
+
+So far — just called things separately
+
+- Dangerous: what if you forget something? 
+- Also annoying
 
 #### Unifying 
  
