--- a/src/slides/general-principles/structuring-code.qmd
+++ b/src/slides/general-principles/structuring-code.qmd
@@ -499,7 +499,7 @@ sns.kdeplot(static_results, ax=ax, color=THEME_COLOR)
 plt.axvline(0, color=THEME_COLOR, linestyle="--", label="No bias")
 plt.axvline(np.mean(static_results), color="brown", linestyle="--", label="MC Estimate")
 plt.title(
-    f"Distribution of OLS Estimates under Static Model",
+    f"Distribution of OLS Estimation Error under Static Model",
     loc="left",
 )
 plt.xlabel("Estimation error")
@@ -589,6 +589,7 @@ Can now run our simulations with $\beta \in \curl{0, 0.5, 0.95}$:
 
 ```{python}
 #| echo: true
+#| code-line-numbers: "1-3"
 ar_results_no_pers = simulate_ols(beta1=0, dgp_type="ar1")
 ar_results_med_pers = simulate_ols(beta1=0.5, dgp_type="ar1")
 ar_results_high_pers = simulate_ols(beta1=0.95, dgp_type="ar1")
@@ -608,7 +609,52 @@ Conclusions:
 
 </div>
   
+#### MC Distribution Under Persistence
 
+
+```{python}
+fig, ax = plt.subplots(figsize=(14, 4.5))
+fig.patch.set_facecolor(BG_COLOR)
+fig.patch.set_edgecolor(THEME_COLOR)
+fig.patch.set_linewidth(5)
+sns.kdeplot(ar_results_high_pers, ax=ax, color=THEME_COLOR)
+plt.axvline(0, color=THEME_COLOR, linestyle="--", label="No bias")
+plt.axvline(np.mean(ar_results_high_pers), color="brown", linestyle="--", label="MC Estimate")
+plt.title(
+    f"Distribution of OLS Estimation Error under AR(1) with $\\beta_1=0.95$",
+    loc="left",
+)
+plt.xlabel("Estimation error")
+plt.legend()
+plt.show()
+
+```
+
+#### Effect of Sample Size
+ 
+To check effect of sample size, modify `n_obs`:
+
+```{python}
+#| echo: true
+#| code-line-numbers: "1-3"
+ar_results_no_pers = simulate_ols(beta1=0, n_obs=200, dgp_type="ar1")
+ar_results_med_pers = simulate_ols(beta1=0.5, n_obs=200, dgp_type="ar1")
+ar_results_high_pers = simulate_ols(beta1=0.95, n_obs=200, dgp_type="ar1")
+print(f"Bias (no persistence): {np.mean(ar_results_no_pers):.3f}")
+print(f"Bias (medium persistence): {np.mean(ar_results_med_pers):.3f}")
+print(f"Bias (high persistence): {np.mean(ar_results_high_pers):.3f}")
+```
+
+. . .
+
+Conclusions:
+
+<div class='left-color'>
+
+Bias decays as sample size increases
+
+</div>
+  
 
  
 
@@ -617,11 +663,23 @@ Conclusions:
 
 ### Modular Design {background="#43464B"}
 
-#### More DGPs
+#### Problem: How To Expand Simulations?
 
-more sample sizes, more DGPs (e.g. heavier tails)
+By now: a working base simulation
 
-#### Issues
+. . . 
+
+<br>
+
+
+But what if we <span class="highlight">expand our simulations</span>?
+
+- Try more DGPs (e.g. heavier tails for innovations, different $X$)
+- More sample sizes
+- Different models (not necessarily $Y_t = \beta_0 + \beta_1 X_t + U_t$)
+
+
+#### Limitations of Current Approach
 
 We had to rewrite
 
@@ -630,8 +688,10 @@ Note: it's not bad if you just want run one thing
 
 What if we want?
 
-Also didn't set a seed.
+#### Setting the RNG Seed
 
+
+Also didn't set a seed.
 
 
 #### Problem: No Separation of Concerns
@@ -666,6 +726,8 @@ So far — just called things separately
  
 
 #### How Much Information
+
+do not take this as an absolute truth, but more of a suggestion
 
 
 #### Better DGPs
